--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-spring.datasource.url = jdbc:h2:mem:testdb
+spring.datasource.url = jdbc:h2:mem:flyskydb
 spring.h2.console.enabled= true
 spring.datasource.username=sa
 spring.datasource.password=
