--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
